fix: resolve horizontal scrollbar display issue in table

--- a/console/packages/editor/src/styles/table.scss
+++ b/console/packages/editor/src/styles/table.scss
@@ -11,10 +11,33 @@
       margin: 0.5em 0px;
       overflow-x: auto;
       overflow-y: hidden;
+      cursor: default;
 
       &.has-focus {
         .scrollWrapper {
           margin-top: -20px;
+        }
+      }
+
+      &:hover {
+        &::-webkit-scrollbar {
+          width: 0.5rem;
+          height: 0.5rem;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          border-radius: 1rem;
+          background-color: rgba(50, 50, 50, 0.3);
+        }
+
+        &::-webkit-scrollbar-track {
+          border-radius: 1rem;
+          background-color: rgba(50, 50, 50, 0.1);
+        }
+
+        &::-webkit-scrollbar-thumb:hover {
+          border-radius: 1rem;
+          background-color: rgba(50, 50, 50, 0.5);
         }
       }
     }
@@ -44,6 +67,7 @@
       tr {
         position: relative;
         border-bottom: 1px solid $tableBorderColor;
+        cursor: text;
       }
 
       th {
@@ -281,13 +305,8 @@
       right: -2px;
       bottom: -2px;
       width: 4px;
-      pointer-events: none;
       background-color: $tableResizeHandleBgColor;
       z-index: 1;
-    }
-
-    &.resize-cursor {
-      cursor: ew-resize;
       cursor: col-resize;
     }
   }
